src/Resources/public/framework/scss/styles/_tiny-slider.scss
.init-slider{

  > .inside{
    margin: -#{divide($grid-gutter-width,2)};

    > .c_headline {
      padding: divide($grid-gutter-width, 2) divide($grid-gutter-width, 2) 0;
    }
  }

  .c_list > div{
    outline: 0 none;
  }

  .tns-ovh {
    margin: divide($grid-gutter-width, 2);
    overflow: visible;
  }

  &.boxed, &.ce_wrapper{

    .tns-ovh{
      margin: 0;
    }
  }

  &.boxed{

     > .inside{
       margin: 0;
     }
  }

  &.ce_wrapper{
    overflow: hidden;
  }

  .tns-nav,
  .tns-controls {
    margin: $grid-gutter-bottom divide($grid-gutter-width, 2) divide($grid-gutter-width, 2);
  }

  .tns-outer {
    > div:first-child,
    > div:nth-child(2) {
      &.tns-nav,
      &.tns-controls {
        margin: divide($grid-gutter-width, 2) divide($grid-gutter-width, 2) $grid-gutter-bottom;
      }
    }
  }
}

.tns-slider{

  &.grid-list {
    margin: 0;

    > div {
      padding: 0;
    }

    &.tns-vertical > div {
      padding: 0 divide($grid-gutter-width, 2) divide($grid-gutter-width, 2);
    }
  }

  .tns-item {
    -webkit-user-select: none;
    user-select: none;

    img {
      -webkit-user-drag: none;
    }
  }
}

.tns-nav{
  text-align: center;
  margin: $grid-gutter-bottom 0 0;

  > button{
    display: inline-block;

    width: $tns-dot-size;
    height: $tns-dot-size;

    padding: 0;
    margin-left: $tns-dot-spacing;
    margin-right: $tns-dot-spacing;

    outline: 0 none;
    border: 0 none;
    border-radius: 50%;
    background-color: $tns-color-regular;

    &.tns-nav-active, &:hover{
      background-color: $tns-color-regular-active;
    }
  }
}


.tns-controls{
  outline: 0 none;
  margin: $grid-gutter-bottom 0;

  > button {
    outline: 0 none;
    border: 0 none;

    color: $tns-color-invert;
    background-color: $tns-color-regular;

    &:hover{
      color: $tns-color-invert-active;
      background-color: $tns-color-regular-active;
    }
  }
}

.tns-outer {
  > div:first-child,
  > div:nth-child(2) {
    &.tns-nav,
    &.tns-controls {
      margin: 0 0 $grid-gutter-bottom;
    }
  }
}

.text-color-invert, .tns-nav-color-invert{

  .tns-nav{

    > button{
      background-color: $tns-color-invert;

      &.tns-nav-active, &:hover{
        background-color: $tns-color-invert-active;
      }
    }
  }
}

.text-color-invert, .tns-controls-color-invert{

  .tns-controls{

    > button {
      color: $tns-color-regular;
      background-color: $tns-color-invert;

      &:hover{
        color: $tns-color-regular-active;
        background-color: $tns-color-invert-active;
      }
    }
  }
}

.tns-nav-color-extra{

  .tns-nav{

    > button{
      background-color: $tns-color-extra;

      &.tns-nav-active, &:hover{
        background-color: $tns-color-extra-active;
      }
    }
  }
}

.tns-controls-color-extra{

  .tns-controls{

    > button {
      color: $tns-color-invert;
      background-color: $tns-color-extra;

      &:hover {
        color: $tns-color-invert-active;
        background-color: $tns-color-extra-active;
      }
    }
  }
}

.tns-nav-color-regular{

  .tns-nav{

    > button{
      background-color: $tns-color-regular;

      &.tns-nav-active, &:hover{
        background-color: $tns-color-regular-active;
      }
    }
  }
}

.tns-controls-color-regular{

  .tns-controls{

    > button {
      color: $tns-color-invert;
      background-color: $tns-color-regular;

      &:hover {
        color: $tns-color-invert-active;
        background-color: $tns-color-regular-active;
      }
    }
  }
}

